--- a/Cinestvar/appsettings.json
+++ b/Cinestvar/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQL5105.site4now.net;Initial Catalog=db_a886e0_kinobaza;User Id=db_a886e0_kinobaza_admin;Password=YOUR_DB_PASSWORD"
+    "DefaultConnection": "Data Source=SQL5105.site4now.net;Initial Catalog=db_a886e0_kinobaza;User Id=db_a886e0_kinobaza_admin;Password=cinestvar123"
   },
   "Logging": {
     "LogLevel": {
